tests/expectations/parser/program/import_fail.out
Error [EPAR0370028]: Invalid network identifier. The only supported identifier is `.aleo`.
    --> test:1:14
     |
   1 | import hello.leo;
     |              ^^^